--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
@@ -30,6 +30,7 @@
             <div class="div_row_right">
                 <div id="divLBText" class="div_select_out SRK">
                     <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <input type="hidden" id="LBID" />
                         <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                         <div class="span_select_arrow"></div>
                     </div>
@@ -39,22 +40,14 @@
             </div>
             <div id="divOUTLBTip" class="Warn"></div>
         </div>
-        <div id="divOUTXLBQ" class="div_row" style="z-index: 998; display: none;">
+        <div id="divXL" class="div_row" style="z-index: 996; display: none;">
             <div class="div_row_left font_two">
                 <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">小类</span>
+                <span id="spanXL">小类</span>
             </div>
-            <div class="div_row_right">
-                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 472px;">
-                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 472px;">
-                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 440px; text-align: left;">请选择小类,最多可选4项</div>
-                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
-                    </div>
-                </div>
-                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
-                </div>
+            <div id="divXLText" class="div_row_right">
             </div>
-            <div id="divOUTXLBQTip" class="Warn" style="z-index: 996"></div>
+            <div id="divXLTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">服务详情</span>
