--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
@@ -22,32 +22,26 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 999">
+        <div id="divLB" class="div_row" style="z-index: 999">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类别</span>
             </div>
             <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="LBID" />
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
+                <div id="divLBText" class="div_select_out SRK" style="width: 325px;">
+                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 325px;">
+                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0; width: 295px;">请选择类别</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                </div>
+                <div class="div_row_right_jcpp">
+                    <div id="div_row_right_jcpp_first" class="div_row_right_jcpp_item div_row_right_jcpp_first">
+                    </div>
+                    <div id="div_row_right_jcpp_second" class="div_row_right_jcpp_item div_row_right_jcpp_second">
                     </div>
                 </div>
             </div>
-            <div id="divOUTLBTip" class="Warn"></div>
-        </div>
-        <div id="divXL" class="div_row" style="z-index: 996; display: none;">
-            <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
-                <span id="spanXL">小类</span>
-            </div>
-            <div id="divXLText" class="div_row_right">
-            </div>
-            <div id="divXLTip" class="Warn" style="z-index: 998;"></div>
+            <div id="divLBTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">服务详情</span>
