--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_NJJSB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_NJJSB.cshtml
@@ -22,39 +22,26 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 999">
+        <div id="divLB" class="div_row" style="z-index: 999">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类别</span>
             </div>
             <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
+                <div id="divLBText" class="div_select_out SRK" style="width: 325px;">
+                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 325px;">
+                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0; width: 295px;">请选择类别</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                </div>
+                <div class="div_row_right_jcpp">
+                    <div id="div_row_right_jcpp_first" class="div_row_right_jcpp_item div_row_right_jcpp_first">
+                    </div>
+                    <div id="div_row_right_jcpp_second" class="div_row_right_jcpp_item div_row_right_jcpp_second">
                     </div>
                 </div>
             </div>
-            <div id="divOUTLBTip" class="Warn"></div>
-        </div>
-        <div id="divOUTXLBQ" class="div_row" style="z-index: 998; display: none;">
-            <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">小类</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 472px;">
-                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 472px;">
-                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 440px; text-align: left;">请选择小类,最多可选4项</div>
-                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
-                    </div>
-                </div>
-                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
-                </div>
-            </div>
-            <div id="divOUTXLBQTip" class="Warn" style="z-index: 996"></div>
+            <div id="divLBTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">服务详情</span>
