--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -57,6 +57,7 @@
                     <input id="SS" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
                     <input type="hidden" id="LBID" />
                     <input type="hidden" id="URL" />
+                    <input type="hidden" id="CONDITION" />
                     <span id="span_ss" class="span_ss">搜索</span>
                 </span>
                 <div id="divSSJGlist" class="div_select_dropdown"></div>
