--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -23,8 +23,8 @@
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhczxx">如何查找信息</span>
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxshgf">信息审核规范</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_mjrm">买家入门</span>
+                    @*<em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_mjrm">买家入门</span>*@
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
@@ -45,8 +45,8 @@
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxzlbbxs">信息在列表不显示</span>
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_tsxxxshcf">提示信息相似或重复</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxwffb">信息无法发布</span>
+                    @*<em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxwffb">信息无法发布</span>*@
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxbsc">信息被删除</span>
                     <em class="em_left_box_bottom_right"></em>
