--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CWSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CWSY.cshtml
@@ -25,37 +25,37 @@
             <div class="div_body_top_right">
                 <p class="span_body_top_right">宠物狗</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=阿拉斯加')">阿拉斯加</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=比熊')">比熊</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=博美犬')">博美犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=巴哥')">巴哥</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=比格犬')">比格犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=比特犬')">比特犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=大白熊')">大白熊</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=斗牛犬')">斗牛犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=杜宾犬')">杜宾犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=大丹犬')">大丹犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=杜高犬')">杜高犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=贵宾')">贵宾</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=高加索犬')">高加索犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=哈士奇')">哈士奇</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=2')">阿拉斯加</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=3')">比熊</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=4')">博美犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=5')">巴哥</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=6')">比格犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=10')">比特犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=19')">大白熊</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=20')">斗牛犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=21')">杜宾犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=22')">大丹犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=23')">杜高犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=25')">贵宾</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=26')">高加索犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=30')">哈士奇</li>
                 </ul>
                 <p class="span_body_top_right">宠物猫</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=波斯猫')">波斯猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=金吉拉')">金吉拉</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=加菲猫')">加菲猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=短毛猫')">短毛猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=蓝猫')">蓝猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=折耳猫')">折耳猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=雪鞋猫')">雪鞋猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=埃及猫')">埃及猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=巴厘猫')">巴厘猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=伯曼猫')">伯曼猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=布偶猫')">布偶猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=蒂凡尼猫')">蒂凡尼猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=波米拉猫')">波米拉猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=德文卷毛猫')">德文卷毛猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=113')">波斯猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=1168')">金吉拉</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=1167')">加菲猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=1163')">短毛猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=11615')">蓝猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=11649')">折耳猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=11645')">雪鞋猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=106')">埃及猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=108')">巴厘猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=111')">伯曼猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=114')">布偶猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=116')">蒂凡尼猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=112')">波米拉猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=115')">德文卷毛猫</li>
                 </ul>
                 <p class="span_body_top_right">花鸟鱼虫</p>
                 <ul class="ul_body_top_right">
@@ -76,29 +76,29 @@
                 </ul>
                 <p class="span_body_top_right">宠物服务</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物医院')">宠物医院</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物寄养')">宠物寄养</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物美容')">宠物美容</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物训练')">宠物训练</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物托运')">宠物托运</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物配种')">宠物配种</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物摄影')">宠物摄影</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=184')">宠物医院</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=185')">宠物寄养</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=186')">宠物美容</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=187')">宠物训练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=188')">宠物托运</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=189')">宠物配种</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=191')">宠物摄影</li>
                 </ul>
                 <p class="span_body_top_right">宠物用品</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=狗粮')">狗粮</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=狗用品')">狗用品</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=猫粮')">猫粮</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=猫用品')">猫用品</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=鱼缸')">鱼缸</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=水族箱')">水族箱</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=其他用品')">其他用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=158')">狗粮</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=159')">狗用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=160')">猫粮</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=161')">猫用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=162')">鱼缸</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=162')">水族箱</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=163')">其他用品</li>
                 </ul>
                 <p class="span_body_top_right">宠物公益</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=宠物赠送')">宠物赠送</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=宠物领养')">宠物领养</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=寻宠启示')">寻宠启示</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=218')">宠物赠送</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=219')">宠物领养</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=220')">寻宠启示</li>
                 </ul>
             </div>
         </div>
