--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
@@ -25,14 +25,14 @@
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、如何查找信息</span></span>
                 <span class="span_body_nav" id="5"><span class="span_body_nav_inner">5、信息审核规范</span></span>
-                <span class="span_body_nav" id="6"><span class="span_body_nav_inner">6、买家入门</span></span>
+                @*<span class="span_body_nav" id="6"><span class="span_body_nav_inner">6、买家入门</span></span>*@
             </div>
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_1">1.成为注册用户</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">首先，在任意页面的上部点击“注册”，跳转到注册新用户的页面，按照提示填写好个人资料，阅读并同意服务条款后点击“同意服务条款并注册”，在注册资料填写正确的前提下，会提示您注册成功。您就成为信息小镇的用户了！ 注册成为用户后，可以直接进行身份认证，可以获得相应的积分和信用。 </td>
+                    <td colspan="2" class="td_content">首先，点击首页或查询页面上方的“免费注册”，跳转到注册新用户的页面，按照提示填写好个人资料，阅读并同意服务条款后点击“同意服务条款并注册”，在注册资料填写正确的前提下，会提示您注册成功。您就成为信息小镇的用户了！ 注册成为用户后，可以直接进行身份认证，可以获得相应的积分和信用。 </td>
                 </tr>
             </table>
         </div>
@@ -40,7 +40,7 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">登录信息小镇后，在首页的又上方有个免费发布信息按钮，点击进入，即可发布信息。 </td>
+                    <td colspan="2" class="td_content">在首页或查询页面右上角有个免费补发信息按钮，在登录信息小镇后，点击进入，即可选择类别，并免费发布信息。 </td>
                 </tr>
             </table>
         </div>
@@ -48,7 +48,7 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">登录信息小镇后，点击我的中心，在我的信息中即可管理信息。 </td>
+                    <td colspan="2" class="td_content">登录信息小镇后，点击我的小镇，在我的信息中即可管理信息。 </td>
                 </tr>
             </table>
         </div>
@@ -56,7 +56,7 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">选择分类，搜索关键字，对查找的信息进行筛选 </td>
+                    <td colspan="2" class="td_content">1.在上方的搜索栏输入关键字，点击搜索，对查找出的信息进行筛选； 2.根据首页已提供的分类进行查询</td>
                 </tr>
             </table>
         </div>
@@ -546,10 +546,10 @@
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_6">6.买家入门</div>
+        @*<div class="div_body_nav_title" id="div_body_nav_title_6">6.买家入门</div>
         <div class="div_body_nav_text">
 
-        </div>
+        </div>*@
     </div>
     <div class="div_bottom">
         <div class="div_bottom_inner">
