--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -13,19 +13,10 @@
         <div class="div_wtjj_inner">
             <table class="table_wtjj">
                 <tr class="tr_wtjj">
-                    <td class="td_wtjj_inner_left"><span class="span_required" style="vertical-align: top">*</span>类别：</td>
+                    <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;">意见内容：</td>
                     <td class="td_wtjj_inner_right">
-                        <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbsc">信息分类建议</span>
-                        <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">区域划分建议</span>
-                        <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">创意点子</span>
-                        <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">其他点子</span>
-                    </td>
-                </tr>
-                <tr class="tr_wtjj">
-                    <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;"><span class="span_required" style="vertical-align: top">*</span>意见内容：</td>
-                    <td class="td_wtjj_inner_right">
-                        <textarea class="textarea_mswt" id="textarea_yjnr">您可填写15-300字。
-您的意见若被采纳，会通过消息通知您，请关注消息更新记录
+                        <textarea class="textarea_mswt" id="textarea_yjnr" maxlength="1000">意见内容在1000字以内。
+若您的意见被采纳，我们将会通过消息通知您，请关注消息更新记录，请留下您宝贵的意见！
                         </textarea>
                         <span class="span_info" id="span_yjnrinfo"></span>
                     </td>
