--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/CXLB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/CXLB.cshtml
@@ -11,12 +11,13 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/js/bootstrap.min.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/underscore.min.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Common.js")></script>
-    <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/CXLB_Common.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Regular.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/PageJson.js")></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Top.js")"></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Head.js")"></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/CXLB_Common.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/SS_Common.js")></script>
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
@@ -55,9 +56,13 @@
         <div class="div_head_right">
             <div class="div_head_right_ss">
                 <span id="spanXSLC" class="span_spaninput_out SRK">
-                    <input class="span_spaninput_in" id="SS" type="text" placeholder="搜索 房子/车子/工作/服务" />
-                    <span class="span_ss">搜索</span>
+                    <input id="SS" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
+                    <input type="hidden" id="LBID" />
+                    <input type="hidden" id="URL" />
+                    <input type="hidden" id="CONDITION" />
+                    <span id="span_ss" class="span_ss">搜索</span>
                 </span>
+                <div id="divSSJGlist" class="div_select_dropdown"></div>
             </div>
             <span class="span_fbxx" id="span_fbxx">免费发布信息</span>
         </div>
