--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -16,6 +16,7 @@
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Top.js")"></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Head.js")"></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/CXLB_Common.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/SS_Common.js")></script>
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
