--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
@@ -56,9 +56,13 @@
         <div class="div_head_right">
             <div class="div_head_right_ss">
                 <span id="spanXSLC" class="span_spaninput_out SRK">
-                    <input class="span_spaninput_in" id="SS" type="text" placeholder="找房子,找工作,找服务," />
-                    <span class="span_ss">搜索</span>
+                    <input id="SS" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
+                    <input type="hidden" id="LBID" />
+                    <input type="hidden" id="URL" />
+                    <input type="hidden" id="CONDITION" />
+                    <span id="span_ss" class="span_ss">搜索</span>
                 </span>
+                <div id="divSSJGlist" class="div_select_dropdown"></div>
             </div>
             <span class="span_fbxx" id="span_fbxx">免费发布信息</span>
         </div>
